Add route to RestRequest
